--- a/comm_knitr.qmd
+++ b/comm_knitr.qmd
@@ -65,20 +65,20 @@ summary(cars)
 
 이것은 `knitr`로 실행되는 R 코드 청크로, R 코드 실행 결과로 치환된다. 뒤에서 더 자세히 다루겠다.
 
-또한, 웹주소는 `< >` 꺾쇠 기호로 담아내고, `**Knit**`처럼 별표 두개를 사용하기도 한다.
+또한, 웹주소는 `< >`로 감싸고, `**Knit**`처럼 별표 두 개를 사용하기도 한다.
 이것이 전형적인 [Markdown](http://daringfireball.net/projects/markdown/syntax) 구문의 한 사례가 된다.
 
 ## 마크다운
 
-HTML 코드로 직접 작성하는 대신 전자 우편에서 문서를 작성하는 것처럼 텍스트에 마크업을 적용해서 웹페이지를 저작하는 시스템이 마크다운이다.
+HTML 코드를 직접 작성하는 대신 전자 우편에서 문서를 작성하는 것처럼 텍스트에 마크업을 적용해서 웹페이지를 저작하는 시스템이 마크다운이다.
 마크업 텍스트는 적절한 HTML 코드로 치환되어 최종 HTML로 *변환*된다.
 
 지금은 자동 생성된 모든 코드를 삭제하고, 마크다운으로 저작을 시작해 보자.
 
-별표 두 개를 사용해서 **굵게**할 수 있는데 `**굵게**`와 같이 타이핑하면 된다.
+별표 두 개를 사용해서 **굵게** 표시할 수 있는데 `**굵게**`와 같이 타이핑하면 된다.
 밑줄 혹은 별표 한 개를 사용해서 *이탤릭*도 구현할 수 있는데, `_이탤릭_`이나 `*이탤릭*`과 같이 타이핑하면 된다.
 
-다음과 같이 하이픈이나 별표를 적용해서 블릿 기호가 붙은 항목을 생성할 수 있다.
+다음과 같이 하이픈이나 별표를 사용해서 블릿 기호가 붙은 항목을 생성할 수 있다.
 
 ```
 - 별표 두 개로 굵게 표시
@@ -358,3 +358,13 @@ PDF 문서를 생성하려면 추가 소프트웨어를 설치해야 한다. 필
 > - [TeX installers for macOS](https://tug.org/mactex/mactex-download.html)  
 
 :::
+
+## 요약
+
+차세대 R 마크다운 쿼토(Quarto)는 데이터 분석 보고서 작성에 있어 강력한 도구로 활용될 수 있다. 마크다운 문법을 사용하여 텍스트를 작성하고, R/파이썬 코드 청크를 통해 분석 결과와 그래프를 동적으로 생성할 수 있기 때문에 분석 결과를 재현 가능한 형태로 문서화할 수 있으며, 오류 수정이나 추가 분석 시 문서 전체를 다시 컴파일하여 업데이트된 결과를 바로 얻을 수 있다.
+
+R 마크다운/쿼토 문서 작성 시에는 YAML 헤더를 통해 문서의 메타데이터를 설정하고, 마크다운 문법을 사용하여 제목, 강조, 리스트, 수식, 하이퍼링크, 이미지 등을 추가할 수 있다. R/파이썬 코드 청크를 사용하여 데이터 불러오기, 전처리, 분석, 시각화 등의 작업을 수행하고 그 결과를 문서에 직접 삽입할 수 있다. 코드 청크에는 다양한 옵션을 설정하여 코드 실행 방식을 제어할 수 있으며, 전역 옵션을 통해 일괄적으로 반영할 수도 있다.
+
+R 마크다운/쿼토 문서는 "Knit" 버튼을 클릭하여 HTML, PDF, 워드 문서 등 다양한 형식으로 변환할 수 있다. `knitr` 패키지가 R 코드를 실행하고 결과를 문서에 삽입하며, `pandoc`이 최종 문서 형식으로 변환하는 역할을 한다. 따라서 R 마크다운을 사용하면 분석 보고서 작성에 드는 시간과 노력을 크게 줄일 수 있다.
+
+
