--- a/comm_quarto.qmd
+++ b/comm_quarto.qmd
@@ -16,18 +16,20 @@ source("_common.R")
 
 데이터를 기반으로 뭔가 유용한 것을 창출한 후에 이를 알리기 위해 커뮤니케이션 단계를 거치게 된다.
 가장 흔히 사용하는 방식은 엑셀, 워드, 파워포인트와 같은 MS 오피스 제품을 활용하는 방식이다.
-과거 SAS, SPSS, 미니탭 등 외산 통계 패키지로 데이터를 분석하고 유용한 모형 등을 찾아낸 후에 이를 커뮤니케이션하기 위해 MS 오피스 제품을 통해 커뮤니케이션을 하기도 했다.
-하지만, 각각은 별개의 시스템으로 분리되어 있어 일일이 사람 손이 가는 번거로움이 많았다.
-이를 해결하기 위한 방법은 하나의 도구 혹은 언어로 모든 작업을 처리하는 것이다.
-[^tool-viz-2]
+
+과거에는 SAS, SPSS, 미니탭 등 외산 통계 패키지로 데이터를 분석하고 유용한 모형 등을 찾아낸 후에, 이를 커뮤니케이션하기 위해 MS 오피스 제품을 통해 작업하기도 했다.
+
+하지만, 각각은 별개의 시스템으로 분리되어 있어 일일이 사람의 손길이 필요한 번거로움이 많았다.
+
+이를 해결하기 위한 방법은 하나의 도구 혹은 언어로 모든 작업을 처리하는 것이다. [^tool-viz-2]
 
 [^tool-viz-2]: [Meghan Hall (June 15, 2021), "Extending R Markdown", RStudio: R in Sports Analytics,](https://meghan.rbind.io/slides/rstudio/hall_rstudio_2021)
 
-우선 엑셀은 `tidyverse`로 대체가 되고, 워드는 R 마크다운을 거쳐 쿼토(Quarto), 파워포인트도 R 마크다운(`xaringan` 등)에서 진화한 `reveal.js` 기반 쿼토 슬라이드가 빠르게 자리를 잡아가고 있다.
+우선 엑셀은 `tidyverse`로 대체되고, 워드는 R 마크다운을 거쳐 쿼토(Quarto)로, 파워포인트도 R 마크다운(`xaringan` 등)에서 진화한 `reveal.js` 기반 쿼토 슬라이드가 빠르게 자리를 잡아가고 있다.
 
 ![오피스 기반 커뮤니케이션 현재 상태점검](images/nightingale_office.png){#fig-nightingale-office}
 
-데이터 과학을 커뮤니케이션하는 방식은 다양한 방식이 존재하지만 직장상사뿐만 아니라 집단지성을 넘어 AI를 적극 도입하여 데이터 분석 역량을 고도화하는 데 동료 개발자 및 협업하시는 분들과 커뮤니케이션뿐만 아니라 불특정 다수를 대상으로 한 인터넷 공개와 공유를 통해 새로운 관계를 맺어가는 것도 그 중요성을 더해가고 있다.
+데이터 과학을 커뮤니케이션하는 방식은 다양하게 존재하지만, 직장상사뿐만 아니라 집단지성을 넘어 AI를 적극 도입하여 데이터 분석 역량을 고도화하는 데 동료 개발자 및 협업하시는 분들과의 커뮤니케이션, 그리고 불특정 다수를 대상으로 한 인터넷 공개와 공유를 통해 새로운 관계를 맺어가는 것도 그 중요성을 더해가고 있다.
 
 -   동료 개발자나 협업하시는 분: `.qmd` 파일
 -   직장상사
@@ -48,8 +50,10 @@ source("_common.R")
     -   버전제어와 협업: `git`, `github`, `gitlab`, `bitbucket` 등
 
 데이터 과학 커뮤니케이션에서 동료 개발자나 협업하는 분들과 의사소통할 때는 `.qmd` 파일을 사용한다.
-직장상사와 커뮤니케이션할 때는 PDF 파일, 파워포인트 슬라이드덱, 대시보드 등 다양한 방식을 활용하는데, PDF 파일은 {{< latex >}}, `pandoc`, `quarto`를 사용하고, 파워포인트 슬라이드덱은 `reveal.js` 기반 `quarto`를, 대시보드는 `flexdashboard`를 지나 `quarto` 대시보드를 사용한다.
-일반 공개를 위해서는 웹사이트, 블로그, 책 등의 형태로 공유하는데, 웹사이트는 `distill`을 지나 `quarto` 웹사이트를, 블로그는 `blogdown`을 지나 `quarto` 블로그를, 책은 `bookdown`을 지나 `quarto` 책(book)을 활용한다.
+
+직장상사와 커뮤니케이션할 때는 PDF 파일, 파워포인트 슬라이드덱, 대시보드 등 다양한 방식을 활용하는데, PDF 파일은 {{< latex >}}, `pandoc`, `quarto`를 사용하고, 파워포인트 슬라이드덱은 `reveal.js` 기반 `quarto`를, 대시보드는 `flexdashboard`에서 `quarto` 대시보드로 발전하고 있다.
+
+일반 공개를 위해서는 웹사이트, 블로그, 책 등의 형태로 공유하는데, 웹사이트는 `distill`에서 `quarto` 웹사이트로, 블로그는 `blogdown`에서 `quarto` 블로그로, 책은 `bookdown`에서 `quarto` 책(book)으로 변화하고 있다.
 
 ![이해당사자 쿼토 커뮤니케이션](images/nightingale_communication.jpg){#fig-quarto-communication}
 
@@ -58,13 +62,13 @@ source("_common.R")
 
 ::: grid
 ::: g-col-8
-쿼토를 사용하면 저자들은 코드, 문서 요소, 텍스트를 하나의 문서로 매끄럽게 통합할 수 있어데이터 분석 과정을 투명하고 재현 가능하게 공유할 수 있다. 
+쿼토를 사용하면 저자들은 코드, 문서 요소, 텍스트를 하나의 문서로 매끄럽게 통합할 수 있어 데이터 분석 과정을 투명하고 재현 가능하게 공유할 수 있다.
 
-쿼토 문서는 마치 살아있는 것처럼 역동적이다. R, 파이썬, 줄리아, SQL, JS 코드를 수정하면 분석결과와 데이터 시각화가 자동으로 업데이트되고, 문장을 고치면 전체 문서의 흐름이 자연스럽게 되어 문서 작성이 한층 더 생생해지는 경험을 할 수 있고 무엇보다 문서의 외양보다 콘텐츠 자체 집중할 수 있다.
+쿼토 문서는 마치 살아있는 것처럼 역동적이다. R, 파이썬, 줄리아, SQL, JS 코드를 수정하면 분석결과와 데이터 시각화가 자동으로 업데이트되고, 문장을 고치면 전체 문서의 흐름이 자연스럽게 이어져 문서 작성이 한층 더 생생해지는 경험을 할 수 있으며, 무엇보다 문서의 외양보다 콘텐츠 자체에 집중할 수 있다.
 
 쿼토는 보고서, 학술논문, 프레젠테이션, 대시보드 등 다양한 형식으로 문서를 제작할 수 있을 뿐만 아니라, PDF, Word, HTML, 슬라이드와 인터랙티브 웹페이지까지 개발할 수 있어 작성한 문서를 상황에 맞게 유연하게 공유할 수 있다.
 
-쿼토는 데이터 과학자에게 코딩과 글쓰기를 자유롭게 오가며 통합적으로 사고할 수 있는 환경을 제공하여 AI 데이터 과학 시대 최적의 커뮤니케이션 도구로 평가받고 있다. 
+쿼토는 데이터 과학자에게 코딩과 글쓰기를 자유롭게 오가며 통합적으로 사고할 수 있는 환경을 제공하여 AI 데이터 과학 시대 최적의 커뮤니케이션 도구로 평가받고 있다.
 :::
 
 ::: g-col-4
@@ -75,11 +79,16 @@ source("_common.R")
 ::: callout-tip
 ### "챗GPT 쿼토" 책
 
-이 책은 쿼토(Quarto) 대한 기본적인 내용을 다루고 있다.
-과학기술 디지털 글쓰기에 대한 기본적인 지식을 습득하고 싶은 분들에게
-추천한다.
+이 책은 쿼토(Quarto)에 대한 기본적인 내용을 다루고 있다. 
+과학기술 디지털 글쓰기에 대한 기본적인 지식을 습득하고 싶은 분들에게 추천한다.
 
 📘 교보 POD 종이책: [https://bit.ly/3wElKuk](https://bit.ly/3wElKuk) <br> 📗 교보 전자책: [https://bit.ly/3IkWE6f](https://bit.ly/3IkWE6f) <br> 🌐 웹사이트: [https://bit.ly/3P7PVjX](https://bit.ly/3P7PVjX) <br> 💻 소스코드: [https://bit.ly/3InK46m](https://bit.ly/3InK46m)
 
 :::
+
+## 요약
+
+쿼토(Quarto)는 데이터 과학자들에게 코딩과 글쓰기를 통합적으로 사고할 수 있는 환경을 제공하는 최적의 커뮤니케이션 도구로 평가받고 있다. 과거에는 데이터 분석과 커뮤니케이션을 위해 별도의 도구를 사용하느라 번거로움이 많았지만, 쿼토를 활용하면 하나의 도구로 모든 작업을 처리할 수 있다. 
+
+쿼토 문서는 코드, 문서 요소, 텍스트를 하나로 통합하여 데이터 분석 과정을 투명하고 재현 가능하게 공유할 수 있다. 또한 R, 파이썬, 줄리아, SQL, JS 등 다양한 언어를 지원하며, 코드 수정 시 분석 결과와 데이터 시각화가 자동으로 업데이트되어 문서 작성이 역동적으로 이루어지는 것은 물론 재현가능한 과학기술 문서저작을 가능하게 한다.
 
