--- a/gpt_databot.qmd
+++ b/gpt_databot.qmd
@@ -161,6 +161,103 @@ API 키는 절대 GitHub이나 공개 저장소에 커밋하지 말아야 한다
 분석 목표: 종(species)별 신체 특성 차이 탐색
 ```
 
+### Claude API 사용료 {#sec-gpt-databot-pricing}
+
+Databot은 Claude 3.5 Sonnet을 사용하므로 API 호출마다 비용이 발생한다. 2025년 1월 7일 기준 Anthropic 공식 가격은 다음과 같다.
+
+```{r}
+#| echo: false
+#| label: tbl-claude-pricing
+#| tbl-cap: "Claude API 모델별 사용료 (2025년 1월 7일 기준)"
+
+library(gt)
+library(dplyr)
+
+tibble::tribble(
+  ~model, ~input_mtok, ~output_mtok, ~특징,
+  "Claude Opus 4.5", "$5.00", "$25.00", "최고 성능",
+  "Claude Sonnet 4.5", "$3.00", "$15.00", "균형잡힌 성능/가격",
+  "Claude Sonnet 4.5 (>200K)", "$6.00", "$22.50", "장문맥락 (200K 토큰 초과)",
+  "Claude Haiku 4.5", "$1.00", "$5.00", "최저가, 고속",
+  "Claude Haiku 3.5", "$0.80", "$4.00", "레거시 저가 모델",
+  "Claude Haiku 3", "$0.25", "$1.25", "최저가 레거시"
+) %>%
+  gt() %>%
+  cols_label(
+    model = "모델",
+    input_mtok = "입력 ($/MTok)",
+    output_mtok = "출력 ($/MTok)",
+    특징 = "특징"
+  ) %>%
+  tab_style(
+    style = list(
+      cell_fill(color = "#e8f5e9"),
+      cell_text(weight = "bold")
+    ),
+    locations = cells_body(
+      rows = model == "Claude Sonnet 4.5"
+    )
+  ) %>%
+  tab_footnote(
+    footnote = "MTok = Million Tokens (백만 토큰). 1 토큰 ≈ 0.75 단어 (영어), ≈ 0.5 단어 (한글)"
+  ) %>%
+  tab_footnote(
+    footnote = "Databot은 Sonnet 4.5를 사용 (녹색 강조)",
+    locations = cells_body(
+      columns = model,
+      rows = model == "Claude Sonnet 4.5"
+    )
+  ) %>%
+  tab_source_note(
+    source_note = "출처: https://platform.claude.com/docs/en/about-claude/pricing (2025-01-07 확인)"
+  )
+```
+
+**비용 예시 계산:**
+
+```{r}
+#| echo: false
+#| label: tbl-claude-cost-examples
+#| tbl-cap: "Databot 사용 시나리오별 예상 비용"
+
+tibble::tribble(
+  ~scenario, ~input_tokens, ~output_tokens, ~cost,
+  "간단한 질문 1회", "1,000", "500", "$0.0105",
+  "데이터 탐색 (5회 질문)", "10,000", "5,000", "$0.105",
+  "심화 분석 세션 (20회)", "50,000", "20,000", "$0.45",
+  "Quarto 보고서 생성", "80,000", "10,000", "$0.39"
+) %>%
+  gt() %>%
+  cols_label(
+    scenario = "사용 시나리오",
+    input_tokens = "입력 토큰",
+    output_tokens = "출력 토큰",
+    cost = "예상 비용 (USD)"
+  ) %>%
+  tab_style(
+    style = cell_text(align = "right"),
+    locations = cells_body(columns = c(input_tokens, output_tokens))
+  ) %>%
+  tab_footnote(
+    footnote = "Claude Sonnet 4.5 기준 ($3/MTok 입력, $15/MTok 출력)"
+  ) %>%
+  tab_source_note(
+    source_note = "실제 비용은 대화 길이, 데이터 크기, 응답 상세도에 따라 달라짐"
+  )
+```
+
+**비용 절감 팁:**
+
+- **배치 API**: 시간에 민감하지 않은 작업은 Batch API 사용 시 50% 할인
+- **프롬프트 캐싱**: 반복되는 컨텍스트는 캐시 활용으로 90% 절감
+- **더 작은 모델**: 단순 작업은 Haiku 모델 사용 고려
+
+:::{.callout-note}
+## API 비용 모니터링
+
+[Anthropic Console](https://console.anthropic.com/)에서 실시간 사용량과 비용을 확인할 수 있다. 예산 초과를 방지하려면 월별 사용 한도를 설정하는 것이 좋다.
+:::
+
 ## 기본 사용법 {#sec-gpt-databot-usage}
 
 ### Databot 실행
@@ -347,7 +444,7 @@ TukeyHSD(penguin_anova)
 Databot은 CRAN에 등록되지 않았으므로 `install.packages()`로 설치할 수 없다. GitHub에서만 설치 가능하며, 개발 도구(Rtools, Command Line Tools 등)가 필요할 수 있다.
 
 **API 키 필수:**
-Anthropic API 키가 없으면 Databot을 사용할 수 없다. 무료 체험판이 없으므로 API 사용 요금이 발생한다.
+Anthropic API 키가 없으면 Databot을 사용할 수 없다. 무료 체험판이 없으므로 API 사용 요금이 발생한다. Claude 3.5 Sonnet 사용료는 입력 토큰 백만 개당 $3, 출력 토큰 백만 개당 $15다 (2025년 1월 7일 기준).
 
 **RStudio/Positron 권장:**
 Databot은 RStudio나 Positron IDE에서 최적화되어 있다. 일반 R 콘솔에서는 Shiny 앱이 별도 브라우저에서 열린다.
