Databot 실전 사례를 실제 모기 데이터 분석으로 교체
변경 사항:
- 펭귄 데이터 → 모기 데이터 실제 분석 사례
- 34턴 대화 세션 전체 과정 기록
- 구체적인 대화 흐름:
  * 통계분석 요청
  * t-test 수행 (p=0.0007, d=4.38)
  * Cohen's d 계산 (d=1.109, 큰 효과)
  * Quarto 보고서 자동 생성

- 실제 비용 데이터 포함:
  * 입력: 95,311 토큰
  * 출력: 7,883 토큰
  * 총 비용: $0.40 (약 566원)
  * 턴당 평균: $0.012 (약 17원)

- 자연스러운 대화 흐름 강조
- 번호 선택 또는 자연어 입력 가능성 명시

--- a/gpt_databot.qmd
+++ b/gpt_databot.qmd
@@ -297,76 +297,112 @@ live_console(chat)
 
 @fig-databot-workflow 는 Databot을 사용한 데이터 분석 과정을 보여준다. 데이터를 로드한 후 `databot::chat()`을 실행하면 Databot이 자동으로 데이터를 탐색하고 분석 아이디어를 제안한다. 사용자는 제안된 질문을 클릭하거나 직접 질문을 입력할 수 있으며, Databot은 R 코드를 생성하고 실행하여 결과를 보여준다. 추가 분석이 필요하면 대화를 계속 이어가고, 완료 시 Quarto 보고서로 정리할 수 있다.
 
-### 실전 예제: 펭귄 데이터 분석
+### 실전 예제: 모기 데이터 통계 분석
 
-\index{palmerpenguins}palmerpenguins 패키지의 펭귄 데이터를 Databot으로 분석하는 과정을 살펴보자.
+실제로 Databot을 사용하여 모기(mosquitos) 데이터를 분석한 사례를 살펴보자. 맥주와 물 섭취가 모기 유인에 미치는 영향을 조사한 실험 데이터다.
+
+**데이터 로드 및 Databot 실행:**
 
 ```{r}
 #| eval: false
-library(palmerpenguins)
+library(tidyverse)
 library(databot)
 
-# 데이터 로드
-data(penguins)
+# CSV 데이터 로드
+mosquitos <- read_csv("data/mosquitos.csv")
 
 # Databot 실행
-chat()
+databot::chat()
 ```
 
-Databot을 실행하면 다음과 같은 분석 제안을 받을 수 있다.
+Databot을 실행하면 환경에 있는 데이터를 자동으로 감지하고 분석 제안을 제공한다.
 
-**Databot의 제안 예시:**
+**Databot의 초기 제안:**
 
-1. "종별 체중 분포를 상자 그림으로 비교해보는 것은 어떨까요?"
-2. "부리 길이와 깊이의 관계를 산점도로 살펴볼까요?"
-3. "성별, 종별 평균 체중을 표로 요약해드릴까요?"
-4. "연도별 관측 개체 수 변화를 확인해볼까요?"
+1. "Explore and summarize data - 데이터 구조 확인, 결측값 검사, 요약 통계"
+2. "Data manipulation - tidyverse로 데이터 정제 및 변환"
+3. "Create visualizations - ggplot2로 패턴 시각화"
+4. "Statistical analysis - 가설 검정, 회귀 모형 등"
+5. "Generate reports - Quarto 재현 가능 문서 생성"
 
-사용자가 첫 번째 제안을 선택하면 Databot은 다음과 같은 코드를 생성하고 실행한다.
+**사용자:** "통계분석을 수행해"
+
+Databot은 데이터를 탐색하고 다음과 같은 정보를 제공한다.
+
+```
+데이터 개요:
+- beer 그룹: 25개 관측치, 평균 23.6마리
+- water 그룹: 18개 관측치, 평균 19.2마리
+
+제안하는 분석:
+1. 두 그룹 간 평균 차이 검정 (t-test)
+2. 데이터 분포 시각화
+3. 정규성 검정
+4. 비모수 검정
+5. 효과 크기 계산
+```
+
+**사용자:** "1번" (t-test 선택)
+
+Databot이 생성한 코드와 결과:
 
 ```{r}
 #| eval: false
-library(ggplot2)
+# t-test 수행
+t_test_result <- t.test(count ~ treatment, data = mosquitos)
+print(t_test_result)
 
-ggplot(penguins, aes(x = species, y = body_mass_g, fill = species)) +
-  geom_boxplot() +
-  labs(
-    title = "종별 펭귄 체중 분포",
-    x = "종",
-    y = "체중 (g)"
-  ) +
-  theme_minimal() +
-  theme(legend.position = "none")
+# 결과:
+# t = 3.66, df = 39.11, p-value = 0.0007
+# 평균 차이: 4.38마리 (95% CI: 1.96 ~ 6.80)
 ```
 
-Databot은 코드 실행 결과와 함께 해석도 제공한다.
+**Databot의 해석:**
 
-**Databot의 해석 예시:**
+> "맥주를 마신 그룹(평균 23.6마리)이 물을 마신 그룹(평균 19.2마리)보다 통계적으로 유의하게 더 많은 모기를 끌어들였습니다. p-value가 0.001보다 작으므로 매우 강한 증거입니다."
 
-> "젠투(Gentoo) 펭귄이 가장 무겁고, 아델리(Adelie)와 턱끈(Chinstrap) 펭귄은 비슷한 체중 범위를 보입니다. 젠투 펭귄의 체중 중앙값은 약 5,000g이며, 아델리와 턱끈은 3,000-4,000g 사이에 분포합니다."
+**사용자:** "2번" (효과 크기 계산)
+
+Databot은 Cohen's d를 계산하고 해석을 제공한다.
+
+```{r}
+#| eval: false
+# Cohen's d 계산
+cohens_d <- 1.109  # 큰 효과 크기
+
+# 해석: d > 0.8 → 매우 큰 효과
+# 맥주 섭취가 모기 유인에 강력한 영향을 미침
+```
+
+**사용자:** "qmd 파일로 정리해 마무리하자"
+
+Databot은 대화 세션 전체를 재현 가능한 Quarto 보고서로 자동 생성한다.
+
+```{r}
+#| eval: false
+# 보고서 생성 (Databot이 자동 수행)
+# 파일명: mosquito_analysis_report.qmd
+# 포함 내용:
+# - 데이터 로드 및 탐색
+# - t-test 분석 및 결과
+# - Cohen's d 효과 크기
+# - 시각화 (boxplot, histogram)
+# - 정규성 및 등분산성 검정
+# - 결론 및 해석
+```
+
+**세션 통계 (34턴):**
+
+- **입력 토큰**: 95,311개
+- **출력 토큰**: 7,883개
+- **총 비용**: **$0.40** (약 566원)
+- **평균 비용/턴**: $0.012 (약 17원)
+
+34번의 대화를 통해 데이터 탐색부터 t-test, 효과 크기 계산, Quarto 보고서 생성까지 완료했으며, 비용은 1달러 미만으로 매우 경제적이었다.
 
 ### 대화형 탐색
 
-Databot의 강점은 연속적인 대화를 통해 분석을 심화할 수 있다는 점이다. 첫 번째 분석 결과를 보고 추가 질문을 입력하면 맥락을 유지하며 분석을 이어간다.
-
-**사용자:** "성별로도 나눠서 보여줄래?"
-
-**Databot 생성 코드:**
-
-```{r}
-#| eval: false
-ggplot(penguins, aes(x = species, y = body_mass_g, fill = sex)) +
-  geom_boxplot() +
-  labs(
-    title = "종별, 성별 펭귄 체중 분포",
-    x = "종",
-    y = "체중 (g)",
-    fill = "성별"
-  ) +
-  theme_minimal()
-```
-
-이처럼 자연스러운 대화를 통해 데이터 탐색을 진행할 수 있다.
+Databot의 강점은 연속적인 대화를 통해 분석을 심화할 수 있다는 점이다. 위 예제에서처럼 초기 제안에서 시작하여 t-test, 효과 크기 계산으로 자연스럽게 이어지며, 각 단계마다 해석과 다음 단계 제안을 제공한다. 사용자는 번호를 선택하거나 자연어로 요청하여 분석을 진행할 수 있다.
 
 ## 주요 기능 {#sec-gpt-databot-features}
 
